[gd_scene load_steps=7 format=3 uid="uid://b8e62ui2hyh3j"]

[ext_resource type="Texture2D" uid="uid://ibi74m38fulg" path="res://asset/character/captain_clown_nose/without_sword/01-Idle/Idle 01.png" id="1_f613s"]
[ext_resource type="Script" path="res://sidebar.gd" id="1_ig3h2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bdj50"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kkbvy"]
bg_color = Color(0.298039, 0.988235, 0.988235, 1)
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gp2de"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkj3o"]
bg_color = Color(0.298039, 0.988235, 0.988235, 1)
border_width_left = 2
border_width_top = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_bottom_left = 20

[node name="Sidebar" type="PanelContainer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bdj50")
script = ExtResource("1_ig3h2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 40

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kkbvy")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu1Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_gp2de")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gp2de")
theme_override_styles/normal = SubResource("StyleBoxFlat_gp2de")

[node name="Panel2" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kkbvy")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu2Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_gp2de")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gp2de")
theme_override_styles/normal = SubResource("StyleBoxFlat_gp2de")

[node name="Panel3" type="Panel" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kkbvy")

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu3Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_gp2de")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gp2de")
theme_override_styles/normal = SubResource("StyleBoxFlat_gp2de")

[node name="Menu" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jkj3o")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Menu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="Menu1" type="GridContainer" parent="MarginContainer/HBoxContainer/Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Menu1"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_f613s")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Menu1"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_f613s")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Menu1"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_f613s")
expand_mode = 1

[node name="Menu2" type="GridContainer" parent="MarginContainer/HBoxContainer/Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Menu2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_f613s")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Menu2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_f613s")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Menu2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_f613s")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Menu2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_f613s")
expand_mode = 1

[node name="Menu3" type="GridContainer" parent="MarginContainer/HBoxContainer/Menu/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 3

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Menu3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_f613s")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Menu3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_f613s")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Menu3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_f613s")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Menu3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_f613s")
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="MarginContainer/HBoxContainer/Menu/MarginContainer/Menu3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("1_f613s")
expand_mode = 1

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Panel/Menu1Button" to="." method="_on_menu_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Panel2/Menu2Button" to="." method="_on_menu_2_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Panel3/Menu3Button" to="." method="_on_menu_3_button_pressed"]
